@@ -6,6 +6,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -13,11 +14,13 @@ import java.util.stream.Collectors;
 public class CustomAuthoritiesConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
     private final String REALM_ACCESS = "realm_access";
     private final String ROLE_PREFIX = "ROLE_";
+    private final String ROLES = "roles";
+
     @Override
     public Collection<GrantedAuthority> convert(Jwt source) {
         Map<String, Object> realmAccessMap = source.getClaimAsMap(REALM_ACCESS);
 
-        Object roles = realmAccessMap.get("roles");
+        Object roles = realmAccessMap.get(ROLES);
 
         if (roles instanceof List stringRoles){
             return ((List<String>) stringRoles)
@@ -26,6 +29,6 @@ public class CustomAuthoritiesConverter implements Converter<Jwt, Collection<Gra
                     .collect(Collectors.toList());
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 }
